# youtui

./: .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE.txt  PKGBUILD  README.md  TODO  artist_result.txt  clippy.toml  justfile  log.json  out.json  release-plz.toml  rust-toolchain.toml  searchresult.json  test.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report_crates.md  bug_report_youtui.md  feature_request.md
.github/workflows/: Dockerfile.aur-release  cd.yml  release-plz.yml  requested.yml  rust.yml  scheduled.yml
async-callback-manager/: CHANGELOG.md  Cargo.toml  README.md
async-callback-manager/examples/: basic_network.rs  comprehensive.rs  ratatui_example.rs
async-callback-manager/src/: adaptors.rs  constraint.rs  error.rs  lib.rs  manager.rs  panicking_receiver_stream.rs  sender.rs  task.rs  utils.rs
async-callback-manager/src/manager/: task_list.rs
async-callback-manager/src/task/: dyn_task.rs  map.rs  tests.rs
async-callback-manager/src/task/dyn_task/: handlers.rs  map.rs
async-callback-manager/tests/: integration_tests.rs
async-rodio-sink/: Cargo.toml
async-rodio-sink/src/: lib.rs
json-crawler/: CHANGELOG.md  Cargo.toml
json-crawler/src/: error.rs  iter.rs  lib.rs
src/: app.rs  appevent.rs  cli.rs  config.rs  core.rs  drawutils.rs  error.rs  lib.rs  main.rs
src/app/: component.rs  keycommand.rs  musiccache.rs  player.rs  server.rs  statemanager.rs  structures.rs  taskmanager.rs  ui.rs  view.rs
src/app/component/: actionhandler.rs  contextpane.rs  messagehandler.rs
src/app/server/: api.rs  downloader.rs  player.rs
src/app/ui/: actionhandler.rs  (+11 more)
src/cli/: querybuilder.rs
tui-theme/: Cargo.toml  README.md
tui-theme/src/: lib.rs
youtui/: CHANGELOG.md  Cargo.toml
youtui/config/: config.toml  config.toml.vim-example
youtui/src/: api.rs  app.rs  appevent.rs  async_rodio_sink.rs  cli.rs  config.rs  core.rs  drawutils.rs  error.rs  keyaction.rs  keybind.rs  main.rs  tests.rs  theme.rs  widgets.rs  youtube_downloader.rs
youtui/src/api/: error.rs
youtui/src/app/: component.rs  keycommand.rs  media_controls.rs  musiccache.rs  server.rs  structures.rs  taskmanager.rs  ui.rs  view.rs
youtui/src/app/component/: actionhandler.rs
youtui/src/app/server/: album_art_downloader.rs  api.rs  api_error_handler.rs  downloader.rs  messages.rs  player.rs  song_downloader.rs  song_thumbnail_downloader.rs
youtui/src/app/server/downloader/: utils.rs
youtui/src/app/server/player/: rodio_thread.rs
youtui/src/app/server/song_downloader/: utils.rs
youtui/src/app/ui/: action.rs  browser.rs  draw.rs  draw_media_controls.rs  footer.rs  header.rs  logger.rs  playlist.rs
youtui/src/app/ui/browser/: artistalbums.rs  artistsearch.rs  draw.rs  playlistsearch.rs  shared_components.rs  songsearch.rs
youtui/src/app/ui/browser/artistalbums/: albumsongs.rs  artistsearch.rs
youtui/src/app/ui/browser/artistsearch/: search_panel.rs  songs_panel.rs
youtui/src/app/ui/browser/playlistsearch/: search_panel.rs  songs_panel.rs
youtui/src/app/ui/playlist/: async_effects.rs  effect_handlers.rs  tests.rs
youtui/src/app/view/: draw.rs
youtui/src/cli/: querybuilder.rs
youtui/src/config/: keybinds.rs  keymap.rs
youtui/src/widgets/: scrolling_list.rs  scrolling_table.rs  tab_grid.rs
youtui/src/youtube_downloader/: native.rs  yt_dlp.rs
ytmapi-rs/: CHANGELOG.md  Cargo.toml  README.md
ytmapi-rs-json-crawler/: Cargo.toml  README.md
ytmapi-rs-json-crawler/src/: error.rs  iter.rs  lib.rs
ytmapi-rs/src/: _trait_test.rs  auth.rs  builder.rs  client.rs  common.rs  continuations.rs  crawler.rs  error.rs  json.rs  lib.rs  nav_consts.rs  parse.rs  process.rs  query.rs  simplified_queries.rs  tests.rs  upload_song.rs  utils.rs  youtube_enums.rs
ytmapi-rs/src/auth/: browser.rs  noauth.rs  oauth.rs
ytmapi-rs/src/parse/: album.rs  artist.rs  continuations.rs  history.rs  library.rs  playlist.rs  playlists.rs  podcasts.rs  rate.rs  recommendations.rs  search.rs  song.rs  upload.rs  user.rs  watch_playlist.rs
ytmapi-rs/src/parse/search/: tests.rs
ytmapi-rs/src/process/: album.rs  artist.rs  continuations.rs  library.rs  search.rs
ytmapi-rs/src/query/: album.rs  artist.rs  continuations.rs  history.rs  library.rs  playlist.rs  podcasts.rs  rate.rs  recommendations.rs  search.rs  song.rs  upload.rs  user.rs  watch_playlist.rs
ytmapi-rs/src/query/playlist/: additems.rs  create.rs  edit.rs
ytmapi-rs/src/query/search/: filteredsearch.rs
ytmapi-rs/src/utils/: process_results.rs
ytmapi-rs/test_json/: add_playlist_items_20240626.json  add_playlist_items_20240626_output.txt  add_playlist_items_failure_20240626.json  browse_artist.json  browse_artist_albums.json  browse_artist_albums_output.txt  delete_upload_entity_20240715.json  edit_playlist_title_20240626.json  get_album_20240622.json  get_album_20240622_output.txt  get_album_20240724.json  get_album_20240724_output.txt  get_album_not_signed_in_20250611.json  get_album_not_signed_in_20250611_output.txt  get_album_various_artists_no_thumbnail_20240818.json  get_album_various_artists_no_thumbnail_20240818_output.txt  get_artist_20240705.json  get_artist_20240705_output.txt  get_artist_20250310.json  get_artist_20250310_output.txt  get_channel_20240830.json  get_channel_20240830_output.txt  get_channel_episodes_20240830_output.txt  get_episode_20240830.json  get_episode_20240830_output.txt  get_history_20240701_output.txt  get_history_20240713.json  get_history_20240713_output.txt  get_library_albums_20240701.json  get_library_albums_20240701_output.txt  get_library_albums_continuation_mock.json  get_library_artist_subscriptions_20240701.json  get_library_artist_subscriptions_20240701_output.txt  get_library_artist_subscriptions_continuation_mock.json  get_library_artists.json  get_library_artists_continuation_mock.json  get_library_artists_output.txt  get_library_channels_20250626.json  get_library_channels_20250626_output.txt  get_library_channels_continuation_20250626.json  (+133 more)
ytmapi-rs/tests/: api.rs  live_integration_tests.rs
ytmapi-rs/tests/utils/: mod.rs
(+7 files in other folders)
