[package]
name = "youtui"
version = "0.1.1"
edition = "2021"
authors = ["nick42d"]

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
crossterm = { version = "0.26.1", features = ["event-stream"] }
futures = "0.3.28"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
serde = "1.0.164"
serde_json = "1.0.97"
tokio = "1.29.1"
ytmapi-rs = { path = "./ytmapi-rs" }
tracing = "0.1.37"
tui-logger = { version = "0.9.5", default-features = false, features = ["ratatui-support", "crossterm", "tracing-support"] }
tracing-subscriber = "0.3.17"
# Currently crashes on pop_os
# rusty_ytdl = { version = "0.6.4", features = ["tokio"] }
rusty_ytdl = { git = "https://github.com/ccgauche/rusty_ytdl"}
rodio = { version = "0.17.2", features = ["symphonia-all"] }
directories = "5.0.1"
gag = "1.0.0"
toml = "0.8.8"
