[package]
name = "youtui"
version = "0.0.1-1"
edition = "2021"
authors = ["nick42d"]
license = "MIT"
description = "A simple TUI YouTube Music player"
homepage = "https://github.com/nick42d/youtui"
repository = "https://github.com/nick42d/youtui"
readme = "README.md"
keywords = ["youtube", "music", "player", "tui"]
categories = ["multimedia::audio"]

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3.28"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
serde = "1.0.164"
serde_json = "1.0.97"
tokio = "1.29.1"
ytmapi-rs = { path = "./ytmapi-rs", version = "0.0.1" }
tracing = "0.1.37"
tui-logger = { version = "0.10.0", default-features = false, features = [ "crossterm", "tracing-support"] }
tracing-subscriber = "0.3.17"
rusty_ytdl = { version = "0.6.5" }
rodio = { version = "0.17.2", features = ["symphonia-all"] }
directories = "5.0.1"
gag = "1.0.0"
toml = "0.8.8"
