[package]
name = "youtui"
version = "0.0.4"
edition = "2021"
authors = ["nick42d"]
license = "MIT"
description = "A simple TUI YouTube Music player"
homepage = "https://github.com/nick42d/youtui"
repository = "https://github.com/nick42d/youtui"
readme = "README.md"
keywords = ["youtube", "music", "player", "tui"]
categories = ["multimedia::audio"]
# Required for async trait support
rust-version = "1.75"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3.29"
ratatui = { version = "0.25.0", features = ["all-widgets"] }
serde = "1.0.193"
serde_json = "1.0.108"
tokio = "1.35.0"
ytmapi-rs = { path = "./ytmapi-rs", version = "0.0.3", default_features = false, features = ["rustls-tls"]}
tracing = "0.1.40"
tui-logger = { version = "0.10.1", default-features = false, features = [
  "crossterm",
  "tracing-support",
] }
tracing-subscriber = "0.3.18"
rusty_ytdl = { version = "0.6.6", default-features = false, features = [
  "live",
  "rustls-tls",
] }
rodio = { version = "0.17.3", features = ["symphonia-all"] }
directories = "5.0.1"
gag = "1.0.0"
toml = "0.8.8"
# For intersperse feature. RFC in progress to bring to std
# https://github.com/rust-lang/rust/issues/79524
itertools = "0.12.0"
