[package]
name = "async-callback-manager"
version = "0.0.4"
edition = "2021"
authors = ["nick42d"]
license = "MIT"
description = "Library that provides an interface to create and manage asynchronous callbacks in Rust. Dependency of `youtui` music player."
homepage = "https://github.com/nick42d/youtui"
repository = "https://github.com/nick42d/youtui"
readme = "README.md"

[dependencies]
futures = "0.3.31"
reqwest = "0.12.9"
tokio = { version = "1.41.1", default-features = false, features = ["macros"] }
tracing = "0.1.40"
# For Then combinator
tokio-stream = "0.1.16"

[dev-dependencies]
tokio-stream = "0.1.16"
tokio = { version = "1.41.1", features = ["full"] }
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
reqwest = { version = "0.12.9", features = [
  "http2",
  "charset",
  "rustls-tls"
] }

[lints]
workspace = true
