[package]
name = "async-callback-manager"
version = "0.1.1"
edition = "2024"
authors = ["nick42d"]
license = "MIT"
description = "Library that provides an interface to create and manage asynchronous callbacks in Rust. Dependency of `youtui` music player."
homepage = "https://github.com/nick42d/youtui"
repository = "https://github.com/nick42d/youtui"
readme = "README.md"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt"] }
tracing = "0.1.44"
# For Then combinator
tokio-stream = "0.1.18"

[dev-dependencies]
tokio-stream = "0.1.18"
tokio = { version = "1.49.0", features = ["full"] }
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
reqwest = { version = "0.13.1", features = [
  "http2",
  "charset",
  "rustls"
] }

[features]
# Adds restrictions on AsyncTask creation that allow AsyncTasks to be PartialEq.
task-equality = []
# Adds restrictions on AsyncTask creation that allow AsyncTasks to be Debug.
task-debug = []

[lints]
workspace = true
