[package]
name = "async-rodio-sink"
version = "0.0.1"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tokio = "1.39.3"
gag = "1.0.0"
futures = "0.3.30"

# Accommodate for vendoring if required - a change to YouTube API may break downloading or playback.
[dependencies.rodio]
version = "0.20.1"
# version = "0.19.0-youtui-vendored.1"
# package = "youtui-vendored-rodio"
features = ["symphonia-all"]

[lints]
workspace = true
