[package]
name = "json-crawler"
version = "0.0.2"
edition = "2021"
authors = ["nick42d"]
license = "MIT"
description = "Wrapper for serde_json that provides nicer errors when crawling through large json files."
homepage = "https://github.com/nick42d/youtui"
repository = "https://github.com/nick42d/youtui"
readme = "README.md"

[dependencies]
serde = "1.0.209"
serde_json = "1.0.127"
