[package]
name = "youtui"
version = "0.0.23"
edition = "2021"
authors = ["nick42d"]
license = "MIT"
description = "A simple TUI YouTube Music player"
homepage = "https://github.com/nick42d/youtui"
repository = "https://github.com/nick42d/youtui"
readme = "../README.md"
keywords = ["youtube", "music", "player", "tui"]
categories = ["multimedia::audio"]
# Required for async trait support
rust-version = "1.79"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream", "serde"] }
futures = "0.3.31"
rat-text = "1.0.3"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tui-logger = { version = "0.14.4", features = ["tracing-support"] }
serde = "1.0.217"
serde_json = "1.0.138"
tokio = "1.43.1"
gag = "1.0.0"
ytmapi-rs = { path = "../ytmapi-rs", version = "0.0.21", default-features = false, features = [
    "rustls-tls",
    "simplified-queries",
] }
async-callback-manager = { path = "../async-callback-manager", version = "0.0.6" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
directories = "6.0.0"
toml = "0.8.19"
# For intersperse feature. RFC in progress to bring to std
# https://github.com/rust-lang/rust/issues/79524
itertools = "0.14.0"
tokio-stream = { version = "0.1.17", features = ["fs"] }
async_cell = "0.2.2"
bytes = "1.10.0"
anyhow = "1.0.95"

[dependencies.rusty_ytdl]
# version = "0.7.4"
# package = "rusty_ytdl"
version = "0.7.4-youtui-vendored.2"
package = "youtui-vendored-rusty_ytdl"
default-features = false
features = ["live", "rustls-tls"]

# Accommodate for vendoring if required - a change to YouTube API may break downloading or playback.
[dependencies.rodio]
version = "0.20.1"
# version = "0.19.0-youtui-vendored.1"
# package = "youtui-vendored-rodio"
features = ["symphonia-all"]

[dev-dependencies]
pretty_assertions= "1.4.1"
tempfile = "3.16.0"

[lints]
workspace = true
