[package]
name = "youtui"
version = "0.0.26"
edition = "2021"
authors = ["nick42d"]
license = "MIT"
description = "A simple TUI YouTube Music player"
homepage = "https://github.com/nick42d/youtui"
repository = "https://github.com/nick42d/youtui"
readme = "../README.md"
keywords = ["youtube", "music", "player", "tui"]
categories = ["multimedia::audio"]
# Required for Duration::abs_dif
rust-version = "1.82"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
clap_complete = "4.5.51"
crossterm = { version = "0.28.1", features = ["event-stream", "serde"] }
futures = "0.3.31"
ratatui-image = "8.0.0"
# Required for ratatui-image
image = "0.25.6"
rat-text = "1.0.3"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tui-logger = { version = "0.14.4", features = ["tracing-support"] }
serde = "1.0.217"
serde_json = "1.0.138"
tokio = "1.43.1"
gag = "1.0.0"
ytmapi-rs = { path = "../ytmapi-rs", version = "0.2.0", default-features = false, features = [
  "rustls-tls",
  "simplified-queries",
  "reqwest"
] }
async-callback-manager = { path = "../async-callback-manager", version = "0.0.8" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
directories = "6.0.0"
toml = "0.8.19"
# For intersperse feature. RFC in progress to bring to std
# https://github.com/rust-lang/rust/issues/79524
itertools = "0.14.0"
tokio-stream = { version = "0.1.17", features = ["fs"] }
async_cell = "0.2.2"
bytes = "1.10.0"
anyhow = "1.0.95"
chrono = { version = "0.4.41", features = ["serde"] }
souvlaki = { version = "0.8.2", default-features = false, features = [
  "use_zbus",
] }
fs-err = { version = "3.1.1", features=["tokio"] }

# These platforms require an open window to use media controls.
# https://github.com/Sinono3/souvlaki/blob/master/examples/window.rs
[target.'cfg(any(target_os="windows",target_os="macos"))'.dependencies]
raw-window-handle = "0.6.2"
winit = "0.30.10"

[dependencies.rusty_ytdl]
# version = "0.7.4"
# package = "rusty_ytdl"
version = "0.7.4-youtui-vendored.2"
package = "youtui-vendored-rusty_ytdl"
default-features = false
features = ["live", "rustls-tls"]

# Accommodate for vendoring if required - a change to YouTube API may break downloading or playback.
[dependencies.rodio]
version = "0.20.1"
# version = "0.19.0-youtui-vendored.1"
# package = "youtui-vendored-rodio"
features = ["symphonia-all"]

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.16.0"

[lints]
workspace = true
