[package]
name = "youtui"
version = "0.0.37"
# Required for let chains
edition = "2024"
authors = ["nick42d"]
license = "MIT"
description = "A simple TUI YouTube Music player"
homepage = "https://github.com/nick42d/youtui"
repository = "https://github.com/nick42d/youtui"
readme = "../README.md"
keywords = ["youtube", "music", "player", "tui"]
categories = ["multimedia::audio"]
# Required for ceil_char_boundary
rust-version = "1.91"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5.65"
crossterm = { version = "0.29.0", features = ["event-stream", "serde"] }
futures = "0.3.31"
# Disable chafa feature which requires a platform dependency, for easier distribution.
ratatui-image = { version = "10.0.2", default-features = false, features = [ "image-defaults", "crossterm" ] }
# Required for ratatui-image
image = "0.25.9"
rat-text = "3.0.2"
ratatui = { version = "0.30.0", features = ["all-widgets"] }
tui-logger = { version = "0.18.0", features = ["tracing-support"] }
serde = "1.0.228"
serde_json = "1.0.149"
ytmapi-rs = { path = "../ytmapi-rs", version = "0.3.2", features = [ "reqwest", "rustls" ] }
tokio = { version = "1.49.0", features = ["full"] }
gag = "1.0.0"
async-callback-manager = { path = "../async-callback-manager", version = "0.1.1" }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
directories = "6.0.0"
toml = "0.9.11"
# For intersperse feature. RFC in progress to bring to std
# https://github.com/rust-lang/rust/issues/79524
itertools = "0.14.0"
tokio-stream = { version = "0.1.18", features = ["fs"] }
async_cell = "0.2.3"
bytes = "1.11.1"
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
souvlaki = { version = "0.8.3", default-features = false, features = [
  "use_zbus",
] }
fs-err = { version = "3.2.2", features=["tokio"] }
tokio-util = { version = "0.7.18", features = ["io"] }

# These platforms require an open window to use media controls.
# https://github.com/Sinono3/souvlaki/blob/master/examples/window.rs
[target.'cfg(any(target_os="windows",target_os="macos"))'.dependencies]
raw-window-handle = "0.6.2"
winit = "0.30.12"

[dependencies.rusty_ytdl]
# version = "0.7.4"
# package = "rusty_ytdl"
version = "0.7.4-youtui-vendored.4"
package = "youtui-vendored-rusty_ytdl"
default-features = false
features = ["live"]

# Accommodate for vendoring if required - a change to YouTube API may break downloading or playback.
[dependencies.rodio]
version = "0.21.1"
# version = "0.19.0-youtui-vendored.1"
# package = "youtui-vendored-rodio"
features = ["symphonia-all"]

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.24.0"
async-callback-manager = { path = "../async-callback-manager", version = "0.1.1", features = ["task-equality", "task-debug"] }

[lints]
workspace = true
