[package]
name = "ytmapi-rs"
version = "0.0.17"
edition = "2021"
authors = ["nick42d"]
license = "MIT"
description = "An asynchronous (tokio) pure Rust API for Youtube Music using Google's internal API"
homepage = "https://github.com/nick42d/youtui"
repository = "https://github.com/nick42d/youtui"
readme = "README.md"
exclude = ["test_json/*"]

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
# To allow alternative TLS options, we need to opt out of a single reqwest feature.
# This isn't possible in Cargo, so we need to opt back into the other default features.
# https://github.com/rust-lang/cargo/issues/3126
# As of 26/4/24 the following are reqwest default features:
# http2, default-tls, charset
reqwest = { version = "0.12.9", features = [
  "json",
  "http2",
  "charset",
], default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
json-crawler = { version = "0.0.5", path = "../json-crawler" }
sha1 = "0.10.6"
const_format = "0.2.33"
chrono = "0.4.38"
rand = "0.8.5"
# Futures `executor` feature is not required.
futures = { version = "0.3.31", features = ["async-await", "std"] }
itertools = "0.13.0"

[features]
default = ["default-tls", "simplified-queries"]
# Provide alternative TLS options to reqwest's default.
# NOTE: At least one of the TLS features must be enabled.
# If multiple are enabled, or another crate enables multiple,
# the standard builder functions will prefer reqwest's default.
# For more information, see reqest's documentation.
# https://docs.rs/reqwest/latest/reqwest/tls/index.html
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
# Enable the use of simplified queries such as YtMusic::search("xx")
simplified-queries = []
# Enable functions that allow interoperability with the `serde_json` crate.
# NOTE: serde_json dependency is still required whether or not this feature is enabled, as it is used internally.
serde_json = []

[lints]
workspace = true

# Dev only section
[dev-dependencies]
pretty_assertions = "1.4.1"

# Docs.rs-specific configuration required to enable documentation of
# code requiring optional features.
[package.metadata.docs.rs]
# Document all features
all-features = true
# Defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
